# Academic-Success-Student-Classifier

./: .LICENSE  .env  .gitignore  README.md  main.py  pyproject.toml
controllers/: clean_dataset.py  csv_controller.py  data_receiver.py
controllers/logs/: color_logs.py
model_construction/: build_decisiontree.py  build_gaussianbayes.py  build_knn.py  build_lineardiscriminant.py  build_logisticregression.py  build_randomforest.py  model_constructor.py  model_results.py
model_predict/: kaggle_bonus.py
