[project]
name = "AcademicSuccessStudentClassifier"
version = "0.1.0"
description = "Machine Learning Project capstone based on a recent Kaggle competition."
authors = [
    {name = "Adam Long",email = "adam.jacob.long@gmail.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "kaggle (>=2.0.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
